<resources>
    <string name="app_name">Minhas Vacinas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">Sign in</string>
    <string name="register_pet_title">Register Pet</string>
    <string name="register_pet_name_hint">Pet Name</string>
    <string name="register_pet_specie_hint">Pet Specie: e.g. Cat, Dog</string>
    <string name="register_pet_breed_hint">Pet Breed: e.g. Schnauzer, Pitbull</string>
    <string name="register_pet_weight_hint">Pet Weight</string>
    <string name="register_pet_birth_hint">Birthday</string>
    <string name="register_pet_save_button">Save</string>
    <string name="register_pet_cancel_button">Cancel</string>
    <string name="register_title">Register</string>
    <string name="register_name_hint">Enter your name</string>
    <string name="register_email_hint">Enter your email</string>
    <string name="register_confirm_email_hint">Repeat your email</string>
    <string name="register_password_hint">Enter your password</string>
    <string name="register_confirm_password_hint">Repeat your password</string>
    <string name="register_save_button">Save</string>
    <string name="register_cancel_button">Cancel</string>
    <string name="forgot_password_title">Forgot your password?</string>
    <string name="forgot_password_email_hint">Enter email to recover password</string>
    <string name="forgot_password_confirm_button">Confirm</string>
    <string name="forgot_password_cancel_button">Cancel</string>
    <string name="pet_item_name">Name</string>
    <string name="pet_item_next_vaccine_date">Date</string>
    <string name="pet_item_vaccine_type">Type</string>
    <string name="list_vazia">Nenhum Registro Encontrado</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">E-mail Inválido</string>
    <string name="error_invalid_password">Senha Invalida</string>
    <string name="error_incorrect_password">Senha Incorreta</string>
    <string name="error_field_required">Preencha o Campo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
